# ritesh.ch

./: .drone.yml  .gitignore  Cargo.toml  README.md
deploy/: app-config.sh
deploy/docker/: Dockerfile  docker-compose.yml
deploy/environments/development/: config.sh
deploy/environments/production/: config.sh
deploy/environments/production/docker/: docker-compose.yml
src/: main.rs
static/: robots.txt
static/css/: style.css
static/gemini/: index.gmi
static/html/: 404.html
templates/: index.gmi.hbs  index.hbs
web/css/: style.css
