[package]
name = "ritesh-ch"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ritesh-ch-http"
path = "src/bin/http.rs"

[[bin]]
name = "ritesh-ch-gemini"
path = "src/bin/gemini.rs"

[dependencies]
serde = "1"
serde_json = "1"
actix-web = "3"
actix-files = "0.5.0"
handlebars = "4.0.1"
mime = "0.3.14"
env_logger = "0.8.4"
recaptcha = "0.5"
lettre = "0.10.0-rc.3"
http = "0.2.4"
northstar = "0.4.0"
futures-core = "0.3.15"
futures-util = "0.3.15"
anyhow = "1.0.41"
tokio = { version = "0.3.1", features = ["full"] }
